@@ -1,6 +1,9 @@
 # ChangeLog for dev-php5/magickwand
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/magickwand/Attic/ChangeLog,v 1.2 2007/04/17 21:59:01 anant Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/magickwand/Attic/ChangeLog,v 1.3 2007/04/27 00:11:19 beandog Exp $
+
+  27 Apr 2007; Steve Dibb <beandog@gentoo.org> magickwand-1.0.4.ebuild:
+  Add ~amd64, bug 175092
 
   17 Apr 2007; Anant Narayanan <anant@gentoo.org> magickwand-1.0.4.ebuild:
   Fix typo in PHP_EXT_INI and add explicit RDEPEND.
